<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    tools:context=".AddEditNoteActivity">

    <!--edit text for note title-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/idEdtNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/enter_note_title"
        android:inputType="textShortMessage"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_edit" />

    <EditText

        android:id="@+id/idEdtNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/enter_your_note_details"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idEdtNoteName" />

    <!--    <EditText-->
    <!--        android:id="@+id/idEdtNoteDesc"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_below="@id/idEdtNoteName"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:autofillHints=""-->
    <!--        android:gravity="start|top"-->
    <!--        android:hint="@string/enter_your_note_details"-->
    <!--        android:inputType="textMultiLine"-->
    <!--        android:singleLine="false" />-->

    <!--button for saving and updating a note-->

    <!--    <EditText-->
    <!--        android:id="@+id/idEdtNoteDesc"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/enter_your_note_details"-->
    <!--        android:autofillHints=""-->
    <!--        android:gravity="start|top"-->
    <!--        android:layout_margin="10dp"-->
    <!--        android:inputType="textMultiLine"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/idBtn"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.491"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/idEdtNoteName"-->
    <!--       />-->

    <Button
        android:id="@+id/idBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_blue_shade"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>